feat: configure temperature per logical service
